--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" type="text/css" href="css/index.css">
     <link rel="stylesheet" href="https://fonts.google.com/specimen/Raleway?selection.family=Raleway">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script type="text/javascript" 
+    src="index.js">  
+</script>  
 <body>
     <header>
      <nav>
